RESOLVED FIXED235095
[LFC][IFC] Incorrect negative margin handling (both left/right) with RTL inline base direction
https://bugs.webkit.org/show_bug.cgi?id=235095
Summary [LFC][IFC] Incorrect negative margin handling (both left/right) with RTL inli...
alan
Reported 2022-01-11 20:28:19 PST
ssia
Attachments
Patch (14.92 KB, patch)
2022-01-11 20:40 PST, alan
no flags
alan
Comment 1 2022-01-11 20:40:52 PST
Antti Koivisto
Comment 2 2022-01-11 21:18:02 PST
Comment on attachment 448903 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=448903&action=review > LayoutTests/ChangeLog:9 > + * fast/inline/rtl-negative-margins-expected.html: Added. > + * fast/inline/rtl-negative-margins.html: Added. Would be good to get all these new tests to WPT at some point.
EWS
Comment 3 2022-01-12 06:38:52 PST
Committed r287922 (245955@main): <https://commits.webkit.org/245955@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 448903 [details].
Radar WebKit Bug Importer
Comment 4 2022-01-12 06:39:17 PST
Note You need to log in before you can comment on or make changes to this bug.